# zen

./: .gitignore  Cargo.toml  README.md  clippy.toml  index.html
.cargo/: config.toml
docs/: WASM.MD
env/: config.json
env/themes/: README.md  cosmic_purple.json
src/: app.rs  config.rs  main.rs
src/helpers/: values.rs
src/ui/: editor.rs  mod.rs  theme.rs  tree.rs
