[package]
name = "zen"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["syntect"] }
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland"
] }
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
rfd = "0.15.4"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77"
