[package]
name = "zen"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland"
] }
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
rfd = "0.15.4"
log = "0.4"
dirs = "6.0.0"
syntect = "5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = 3
lto = true